Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/repeatingAnnotations/NoRepeatableAnno.out
NoRepeatableAnno.java:11:6: compiler.err.duplicate.annotation.missing.container: Foo
1 error
